<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.chen.memorizewords.feature.user.ui.profile.password.ChangePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="@dimen/page_margin">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/title_icon_size"
            android:layout_height="@dimen/title_icon_size"
            android:layout_marginTop="@dimen/title_margin"
            android:contentDescription="@string/module_user_common_back"
            android:onClick="@{() -> viewModel.back()}"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/module_user_change_password_title"
            android:textColor="#111111"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBack" />

        <EditText
            android:id="@+id/etOldPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/module_user_login_bg_edit_text"
            android:hint="@string/module_user_change_password_old_hint"
            android:inputType="textPassword"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:text="@={viewModel.oldPassword}"
            android:textSize="@dimen/feature_user_change_password_form_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/module_user_login_bg_edit_text"
            android:hint="@string/module_user_change_password_new_hint"
            android:inputType="textPassword"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:text="@={viewModel.newPassword}"
            android:textSize="@dimen/feature_user_change_password_form_text_size"
            app:layout_constraintEnd_toEndOf="@id/etOldPassword"
            app:layout_constraintStart_toStartOf="@id/etOldPassword"
            app:layout_constraintTop_toBottomOf="@id/etOldPassword" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/module_user_login_bg_edit_text"
            android:hint="@string/module_user_change_password_confirm_new_hint"
            android:inputType="textPassword"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:text="@={viewModel.confirmPassword}"
            android:textSize="@dimen/feature_user_change_password_form_text_size"
            app:layout_constraintEnd_toEndOf="@id/etNewPassword"
            app:layout_constraintStart_toStartOf="@id/etNewPassword"
            app:layout_constraintTop_toBottomOf="@id/etNewPassword" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/module_user_login_bg_login_btn"
            android:backgroundTint="@null"
            android:onClick="@{() -> viewModel.submit()}"
            android:text="@string/module_user_change_password_submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/feature_user_change_password_form_text_size"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@id/etConfirmPassword"
            app:layout_constraintStart_toStartOf="@id/etConfirmPassword"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
