<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.chen.memorizewords.feature.user.ui.profile.phone.BindPhoneViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="@dimen/page_margin">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/title_icon_size"
            android:layout_height="@dimen/title_icon_size"
            android:layout_marginTop="@dimen/title_margin"
            android:contentDescription="@string/module_user_common_back"
            android:onClick="@{() -> viewModel.back()}"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/module_user_bind_phone_title"
            android:textColor="#111111"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBack" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/core_ui_dp_24"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/module_user_bind_phone_sms_title"
                    android:textColor="#111111"
                    android:textSize="@dimen/core_ui_text_16"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/core_ui_dp_48"
                    android:layout_marginTop="@dimen/core_ui_dp_16"
                    android:background="@drawable/module_user_login_bg_edit_text"
                    android:hint="@string/module_user_bind_phone_phone_hint"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:paddingStart="@dimen/core_ui_dp_14"
                    android:paddingEnd="@dimen/core_ui_dp_14"
                    android:text="@={viewModel.phone}"
                    android:textSize="@dimen/core_ui_text_15" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clCode"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/core_ui_dp_48"
                    android:layout_marginTop="@dimen/core_ui_dp_16"
                    android:background="@drawable/module_user_login_bg_edit_text">

                    <EditText
                        android:id="@+id/etCode"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:hint="@string/module_user_bind_phone_sms_hint"
                        android:inputType="text"
                        android:paddingStart="@dimen/core_ui_dp_14"
                        android:paddingEnd="@dimen/core_ui_dp_14"
                        android:text="@={viewModel.smsCode}"
                        android:textSize="@dimen/core_ui_text_15"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/btnSendCode"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/btnSendCode"
                        android:layout_width="@dimen/core_ui_dp_112"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/core_ui_dp_4"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:enabled="@{viewModel.isSendCodeEnabled}"
                        android:focusable="true"
                        android:gravity="center"
                        android:maxLines="1"
                        android:paddingStart="@dimen/core_ui_dp_8"
                        android:paddingEnd="@dimen/core_ui_dp_8"
                        android:text="@{viewModel.sendCodeText}"
                        android:textColor="@color/module_user_send_code_text_color"
                        android:textSize="@dimen/core_ui_text_14"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btnConfirmBind"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/core_ui_dp_48"
                    android:layout_marginTop="@dimen/core_ui_dp_24"
                    android:background="@drawable/module_user_login_bg_login_btn"
                    android:backgroundTint="@null"
                    android:text="@string/module_user_bind_phone_sms_confirm"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/core_ui_text_16"
                    app:backgroundTint="@null" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
