<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.chen.memorizewords.feature.user.ui.profile.account.DeleteAccountConfirmViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="@dimen/page_margin">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/title_icon_size"
            android:layout_height="@dimen/title_icon_size"
            android:layout_marginTop="@dimen/title_margin"
            android:contentDescription="@string/module_user_common_back"
            android:onClick="@{() -> viewModel.back()}"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/module_user_delete_account_title"
            android:textColor="#111111"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBack" />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/core_ui_dp_36"
            android:lineSpacingExtra="@dimen/core_ui_dp_4"
            android:text="@string/module_user_delete_account_desc"
            android:textColor="#333333"
            android:textSize="@dimen/core_ui_text_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/core_ui_dp_48"
            android:layout_marginTop="@dimen/core_ui_dp_30"
            android:enabled="@{viewModel.confirmEnabled}"
            android:onClick="@{() -> viewModel.confirmDelete()}"
            android:text="@{viewModel.confirmButtonText}"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/tvContent"
            app:layout_constraintStart_toStartOf="@id/tvContent"
            app:layout_constraintTop_toBottomOf="@id/tvContent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
